# C-Pro

./: .gitignore  README.md  install_boost.sh  sub_init.sh
home_work_01/: CMakeLists.txt  hello_world.cpp
home_work_02-1/: CMakeLists.txt  Rectangle.h  aria_count.cpp  build.sh
home_work_02-2/: CMakeLists.txt  build.sh  game_actor.cpp
home_work_9_weak_ptr/: CMakeLists.txt  build.sh  course.cpp  course.h  student.cpp  student.h  use_weak_ptr.cpp
home_work_add_boost/: CMakeLists.txt  build.sh  main.cpp
home_work_container_logging/: CMakeLists.txt  Logger.h  build.sh  main.cpp
home_work_converter/: CMakeLists.txt  Converter.h  build.sh  main.cpp
home_work_custom_shared_ptr/: CMakeLists.txt  build.sh  custom_shared_ptr.cpp  custom_shared_ptr.h
home_work_custom_shared_ptr/include/: custom_shared_ptr.hpp
home_work_custom_shared_ptr/src/: custom_shared_ptr.cpp  main.cpp
home_work_file_exists_boost/: CMakeLists.txt  build.sh  main.cpp
home_work_filesystem/: CMakeLists.txt  build.sh  f_viewer.cpp  filesystem_viewer.h
home_work_learn_shared_ptr/: CMakeLists.txt  build.sh  course.h  main.cpp  students.h
home_work_singlton/: CMakeLists.txt  build.sh  singleton_logger.cpp
home_work_tcp_udp/client/: CMakeLists.txt  build.sh  client_tcp.cpp
home_work_tcp_udp/server/: CMakeLists.txt  build.sh  server_tcp.cpp
home_work_tcp_udp/server/crt_data/: server.crt  server.csr  server.key
home_work_thread_pool_fs_explorer/: CMakeLists.txt  build.sh  dir_explorer.h  main.cpp  thread_pool.h
home_work_to_do_list/: CMakeLists.txt  build.sh  main.cpp  task.cpp  task.h  task_controller.cpp  task_controller.h  task_manager.cpp  task_manager.h  task_viewer.cpp  task_viewer.h
home_work_visitor/: CMakeLists.txt  Logger.h  Transaction.cpp  Transaction.h  TransactionVisitor.cpp  TransactionVisitor.h  build.sh  main.cpp
